--- a/package.json
+++ b/package.json
@@ -5,8 +5,10 @@
   "bin": "./index.js",
   "devDependencies": {
     "@octokit/rest": "^20.0.1",
+    "chalk": "4",
     "commander": "^11.0.0",
     "console-table-printer": "^2.11.2",
-    "figlet": "^1.6.0"
+    "figlet": "^1.6.0",
+    "node-fetch": "2"
   }
 }
